--- a/02/2.11/ActionHomeTest/res/menu/my_menu.xml
+++ b/02/2.11/ActionHomeTest/res/menu/my_menu.xml
@@ -35,7 +35,7 @@
 		android:icon="@drawable/color">
 		<menu>
 			<!-- 定义一组允许复选的菜单项 -->
-			<group>
+			<group android:checkableBehavior="single">
 				<!-- 定义3个菜单项 -->
 				<item
 					android:id="@+id/red_font"
